--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="main-title">
-            Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+            Treat yourself or a loved one to our finest ingredients for a moment
+            of pure delight!
           </h1>
           <div class="hero-bottom-block">
             <button class="buy-now-btn" type="button">Buy now</button>
@@ -95,9 +96,10 @@
               </span>
               <h3 class="benefits-list-title">Unsurpassed taste</h3>
               <p class="benefits-list-text">
-                Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent
-                experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and
-                discover a new level of chocolate bliss.
+                Crafted with the finest quality cocoa beans and a dedication to
+                perfection, each bite is a decadent experience that simply
+                cannot be matched. Savor the richness and complexity of our
+                Unsurpassed Taste and discover a new level of chocolate bliss.
               </p>
             </li>
             <li class="benefits-list-item">
@@ -108,9 +110,11 @@
               </span>
               <h3 class="benefits-list-title">Affordable price</h3>
               <p class="benefits-list-text">
-                Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of
-                affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or
-                quality. Browse our selection and indulge in affordable luxury today.
+                Indulge in high-quality chocolate without breaking the bank with
+                Simply Chocolate's selection of affordable treats. Enjoy
+                mouth-watering truffles and velvety chocolate bars without
+                sacrificing taste or quality. Browse our selection and indulge
+                in affordable luxury today.
               </p>
             </li>
             <li class="benefits-list-item">
@@ -121,9 +125,10 @@
               </span>
               <h3 class="benefits-list-title">Own production</h3>
               <p class="benefits-list-text">
-                We take pride in our own production process, ensuring that every step is carefully crafted to
-                perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is
-                evident in every bite.
+                We take pride in our own production process, ensuring that every
+                step is carefully crafted to perfection. From selecting the
+                finest ingredients to handcrafting each piece, our attention to
+                detail is evident in every bite.
               </p>
             </li>
           </ul>
@@ -138,9 +143,10 @@
             <span class="accent-color">taste</span> sensation
           </h2>
           <p class="ingredients-description">
-            At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the
-            sourcing of the finest ingredients to the careful crafting of each individual piece, every step of our
-            process adds up to one exceptional taste sensation.
+            At Simply Chocolate, we believe that the secret to exceptional
+            chocolate is in the details. From the sourcing of the finest
+            ingredients to the careful crafting of each individual piece, every
+            step of our process adds up to one exceptional taste sensation.
           </p>
           <ul class="ingredients-list">
             <li class="ingredients-list-item">
@@ -159,9 +165,11 @@
                   <li class="overlay-tags-list-item">the benefits</li>
                 </ul>
                 <p class="ingredient-overlay-text">
-                  Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most
-                  consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian
-                  times. Although four-fifths of all milk chocolate is sold in the United States and Europe.
+                  Milk chocolate is a solid chocolate confectionery containing
+                  cocoa, sugar and milk. It is the most consumed type of
+                  chocolate. Chocolate was originally sold and consumed as a
+                  beverage in pre-Columbian times. Although four-fifths of all
+                  milk chocolate is sold in the United States and Europe.
                 </p>
               </div>
             </li>
@@ -181,10 +189,12 @@
                   <li class="overlay-tags-list-item">the benefits</li>
                 </ul>
                 <p class="ingredient-overlay-text">
-                  Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of
-                  nutrition for young mammals (including breastfed human infants) before they are able to digest solid
-                  food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune
-                  system.
+                  Milk is a white liquid food produced by the mammary glands of
+                  mammals. It is the primary source of nutrition for young
+                  mammals (including breastfed human infants) before they are
+                  able to digest solid food.Early-lactation milk, which is
+                  called colostrum, contains antibodies that strengthen the
+                  immune system.
                 </p>
               </div>
             </li>
@@ -204,10 +214,12 @@
                   <li class="overlay-tags-list-item">the benefits</li>
                 </ul>
                 <p class="ingredient-overlay-text">
-                  Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as
-                  part of a nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart
-                  disease. They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re great on their
-                  own.
+                  Almonds, pistachios, and walnuts are some types of nuts that
+                  contain healthy nutrients. When eaten as part of a
+                  nutrient-dense diet, these 9 nuts may offer benefits such as
+                  reducing your risk of heart disease. They’re a good source of
+                  fiber, healthy fats, and plant protein. Plus, they’re great on
+                  their own.
                 </p>
               </div>
             </li>
@@ -227,9 +239,11 @@
                   <li class="overlay-tags-list-item">the benefits</li>
                 </ul>
                 <p class="ingredient-overlay-text">
-                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an
-                  understanding of this type of chocolate is to compare it to a different type of chocolate. Semisweet
-                  is darker than milk chocolate. In a taste comparison, it has a slightly bitter taste whereas milk
+                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%.
+                  One of the best ways to gain an understanding of this type of
+                  chocolate is to compare it to a different type of chocolate.
+                  Semisweet is darker than milk chocolate. In a taste
+                  comparison, it has a slightly bitter taste whereas milk
                   chocolate is sweeter and more mellow.
                 </p>
               </div>
@@ -241,7 +255,9 @@
       <!-- How made section -->
       <section class="how-made section-paddings" id="making-process">
         <div class="container">
-          <h2 class="section-title how-made-title">How it’s <span class="accent-color">made</span>?</h2>
+          <h2 class="section-title how-made-title">
+            How it’s <span class="accent-color">made</span>?
+          </h2>
           <div class="how-made-content-wrapper">
             <img
               class="how-made-img"
@@ -251,19 +267,29 @@
               height="400"
             />
             <div class="how-made-text-content">
-              <h3 class="how-made-list-title">Try our chocolates today and discover the perfect balance of flavor</h3>
+              <h3 class="how-made-list-title">
+                Try our chocolates today and discover the perfect balance of
+                flavor
+              </h3>
               <ul class="how-made-list">
                 <li class="how-made-list-item">
-                  Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.
+                  Heat the milk in a saucepan without bringing it to a boil. Add
+                  sugar and cocoa powder.
                 </li>
-                <li class="how-made-list-item">At the same time, prepare a water bath. Melt the butter on it.</li>
                 <li class="how-made-list-item">
-                  "Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the
-                  mass becomes uniform and silky.
+                  At the same time, prepare a water bath. Melt the butter on it.
                 </li>
-                <li class="how-made-list-item">Heat the mixture over low heat, letting it barely boil.</li>
                 <li class="how-made-list-item">
-                  Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.
+                  "Mix" the milk mixture and already liquid butter. Mix
+                  thoroughly with a silicone spatula so that the mass becomes
+                  uniform and silky.
+                </li>
+                <li class="how-made-list-item">
+                  Heat the mixture over low heat, letting it barely boil.
+                </li>
+                <li class="how-made-list-item">
+                  Pour the chocolate into special containers (can be replaced
+                  with ice molds). Allow to cool and harden.
                 </li>
               </ul>
             </div>
@@ -274,7 +300,9 @@
       <!-- Reviews section -->
       <section class="reviews" id="reviews">
         <div class="container">
-          <h2 class="section-title reviews-title"><span class="accent-color">Chocolate</span> is loved</h2>
+          <h2 class="section-title reviews-title">
+            <span class="accent-color">Chocolate</span> is loved
+          </h2>
           <ul class="reviews-list">
             <li class="reviews-list-item">
               <img
@@ -286,7 +314,8 @@
               />
               <h3 class="reviews-list-fullname">Victoria Dobrzhanska</h3>
               <p class="reviews-list-text">
-                I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.
+                I love this chocolate bar. Perfect combination of light crispy
+                wafer, covered in a thin layer chocolate.
               </p>
             </li>
             <li class="reviews-list-item">
@@ -299,8 +328,9 @@
               />
               <h3 class="reviews-list-fullname">Nazar Babenko</h3>
               <p class="reviews-list-text">
-                This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is
-                smooth, and the chocolate is good.
+                This chocolate confection is a delight! A delight! The wafer is
+                light and crisp, the hazelnut cream is smooth, and the chocolate
+                is good.
               </p>
             </li>
             <li class="reviews-list-item">
@@ -313,8 +343,9 @@
               />
               <h3 class="reviews-list-fullname">Olena Kampusch</h3>
               <p class="reviews-list-text">
-                Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside.
-                The wafer is soft but crunchy.
+                Chocolate is a family favourite treat. Love the delicious smooth
+                chocolate and the creaminess inside. The wafer is soft but
+                crunchy.
               </p>
             </li>
           </ul>
@@ -326,15 +357,22 @@
     <footer class="page-footer">
       <div class="container">
         <div class="page-footer-top-block">
-          <h2 class="page-footer-title"><span class="accent-color">Chocolate</span> a delicious cure for a bad day</h2>
+          <h2 class="page-footer-title">
+            <span class="accent-color">Chocolate</span> a delicious cure for a
+            bad day
+          </h2>
           <address>
             <p class="contact-description">Contact us</p>
             <ul class="contact-list">
               <li class="contact-list-item">
-                <a class="contact-list-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+                <a class="contact-list-link" href="tel:+380684439426"
+                  >+380 (68) 443-94-26</a
+                >
               </li>
               <li class="contact-list-item">
-                <a class="contact-list-link" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+                <a class="contact-list-link" href="mailto:simplychoc@gmail.com"
+                  >simplychoc@gmail.com</a
+                >
               </li>
             </ul>
           </address>
@@ -353,9 +391,120 @@
               </li>
             </ul>
           </nav>
+          <form class="subscribe-form">
+            <input
+              class="subscribe-form-field"
+              type="email"
+              name="user-email"
+              placeholder="Enter your email"
+              required
+            />
+            <button class="subscribe-form-submit-btn" type="submit">
+              Subscribe
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+    <!-- Modal Window -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-slogan">
+          leave a review about <span class="accent-color">our chocolate</span>
+        </p>
+        <form class="review-form">
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-name">Name</label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-field"
+                id="user-name"
+                type="text"
+                name="user-name"
+                pattern="[a-zA-Zа-яА-ЯіІєЄїЇґҐʼ]+"
+                required
+              />
+              <svg class="review-form-field-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-email">
+              Email
+            </label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-field"
+                id="user-email"
+                type="email"
+                name="user-email"
+                required
+              />
+              <svg class="review-form-field-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-phone">
+              Phone number
+            </label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-field"
+                id="user-phone"
+                type="tel"
+                name="user-phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="review-form-field-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-comment">
+              Comment
+            </label>
+            <textarea
+              class="review-form-comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Enter text"
+              required
+            ></textarea>
+          </div>
+          <div class="review-form-checkbox-wrapper">
+            <input
+              class="review-form-policy-checkbox visually-hidden"
+              id="privacy-policy"
+              type="checkbox"
+              name="privacy-policy"
+              value="true"
+              required
+            />
+            <label class="review-form-policy-label" for="privacy-policy">
+              <span class="review-form-custom-checkbox">
+                <svg class="review-form-checkmark-icon" width="10" height="10">
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="review-form-privacy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="review-form-submit-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
 
